--- a/achievements-test.css
+++ b/achievements-test.css
@@ -35,3 +35,9 @@
     font-size: 14px; /* Размер шрифта описания */
     color: #666; /* Цвет текста описания */
 }
+
+@media (max-width: 600px) {
+    .achievement {
+        width: calc(50% - 5px); /* Элементы будут занимать половину ширины экрана с меньшим отступом */
+    }
+}
